# Dendro-5.01

./: .gitignore  CMakeLists-NonLibraryDefs.txt  CMakeLists.txt  temp.toml  temp.txt
.github/workflows/: library_tests.yml  ubuntu.yml
FEM/include/: lapac.h  refel.h
GR/: CMakeLists.txt
GR/TwoPunctures/: EM.cpp  TPCoordTransf.cpp  TPEquations.cpp  TPFuncAndJacobian.cpp  TPID.cpp  TPNewton.cpp  TPUtilities.cpp  TwoPunctures.cpp
GR/include/: TPUtilities.h  TwoPunctures.h  adm2bssn.h  adm2emda.h  dendro_gr_bh.h  grDataUtils.h  gwConfig.h  gwExtract.h  tpid_params.h
IO/vtk/src/: oct2vtk.cpp
NLSigma/: CMakeLists.txt
NLSigma/include/: compact_derivs.h  derivs.h  nlsmCtx.h  nlsmUtils.h  parameters.h  rhs.h
NLSigma/par/: nlsmA_SMALL.par.json
NLSigma/src/: check_compact_derivs.cpp  compact_derivs.cpp  derivs.cpp  nlsmCtx.cpp  nlsmUtils.cpp  nlsm_nuts.cpp  parameters.cpp  rhs.cpp
ODE/include/: ctx.h  ets.h  ts.h
include/: TreeNode.h  aeh_bhahaha.h  asyncExchangeContex.h  block.h  compression.h  dendroProfileParams.h  derivatives.h  dvec.h  filters.h  mesh.h  mesh.tcc  meshE2NUtils.tcc  meshUtils.h  octUtils.h  parUtils.h  parUtils.tcc  scattermapConfig.h  sfcSearch.h  treenode2vtk.h
include/compression/: compression_base.hpp  compression_factory.hpp  compression_interface.hpp  compression_wrapper.hpp  compressor_dummy.hpp  compressor_interpolation.hpp  compressor_onnx.hpp  compressor_torchscript.hpp  compressor_zfp.hpp
include/derivatives/: adv_derivs_explicit.h  derivs_banded.h  derivs_compact.h  derivs_explicit.h  derivs_factory.h  derivs_matrixonly.h  derivs_utils.h  filt_inmat.h  filt_inmat_byufilter.h  filt_inmat_kim.h  filt_kodiss_explicit.h  impl_BYUFilter.h  impl_Kimfilter.h  impl_boris.h  impl_bradylivescu.h  impl_byuderivs.h  impl_explicitmatrix.h  impl_hybrid_approaches.h  impl_jonathantyler.h  impl_kimderivs.h  nova_derivs.h
include/lib/: mlinterp.hpp
lib/BHaHAHA/: CMakeLists.txt  bah_over_relaxation.c
libs/libxsmm/: CMakeLists.txt
scripts/: generate_chebyshev_filter_matrix.py  generate_chebyshev_output.py
src/: aeh_bhahaha.cpp  block.cpp  compression.cpp  dendroProfileParams.cpp  derivatives.cpp  mesh.cpp  meshUtils.cpp  octUtils.cpp
src/compression/: compression_factory.cpp
src/derivatives/: adv_derivs_explicit.cpp  derivs_banded.cpp  derivs_compact.cpp  derivs_explicit.cpp  derivs_matrixonly.cpp  derivs_utils.cpp  filt_kodiss_explicit.cpp  impl_BYUFilter.cpp  impl_Kimfilter.cpp  impl_boris.cpp  impl_bradylivescu.cpp  impl_byuderivs.cpp  impl_explicitmatrix.cpp  impl_jonathantyler.cpp  impl_kimderivs.cpp  nova_derivs.cpp
test/: test_cfd_params.toml
test/include/: argparse.hpp  derivativeCtx.hpp  testMatMul.h  testUtils.tcc
test/src/: compressDecompressTest.cpp  derivativeConvergence.cpp  derivativeCtx.cpp  globalMatrixBuilding.cpp  partitioningMeshTests.cpp  testAllDerivs.cpp  testBandedVsXSMM.cpp  testCompactDerivs.cpp  testDerivConvergence.cpp  testFusedMixed.cpp  testKODiss.cpp  testLibXSMMvBLAS.cpp  testMatMul.cpp  testNova.cpp  testRhsWorkflow.cpp  testTorch.cpp  test_compression_classes.cpp  test_new_partitioning.cpp
